removed cursor affect on mobile && fixed link visibility issue

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -36,9 +36,18 @@
   @apply text-lg loom;
 }
 
-.element {
-  mask-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect x='0' y='0' width='100' height='100' rx='25' ry='25' /><circle cx='50' cy='50' r='40' /></svg>");
-  mask-repeat: no-repeat;
-  mask-size: 300px 300px;
-  overflow: hidden;
+#element {
+  /* there is a default display: block on the mask property that needs to be overriden.  */
+  display: none !important;
 }
+
+@media screen and (min-width: 768px) {
+  #element {
+    mask-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect x='0' y='0' width='100' height='100' rx='25' ry='25' /><circle cx='50' cy='50' r='40' /></svg>");
+    mask-repeat: no-repeat;
+    mask-size: 300px 300px;
+    overflow: hidden;
+    display: block !important;
+  }
+}
+
